--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,22 @@ cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
 # Project Name
 project(time-logger)
 
+# Set our variables
+set(wxWidgets_ROOT_DIR $ENV{wx_ROOT_DIR})
+set(wxWidgets_LIB_DIR $ENV{wx_LIB_DIR})
 
 # Add wxWidgets
-find_package(wxWidgets COMPONENTS gl core base OPTIONAL_COMPONENTS net)
-message(STATUS "wx include dir: ${wxWidgets_INCLUDE_DIRS}")
-if(wxWidgets_FOUND)
-  include(${wxWidgets_USE_FILE})
-  message(STATUS "wx include dir: ${wxWidgets_INCLUDE_DIRS}")
-  # and for each of your dependent executable/library targets:
-  target_link_libraries(time-logger ${wxWidgets_LIBRARIES})
-endif()
+find_package(wxWidgets REQUIRED COMPONENTS net core base)
+include(${wxWidgets_USE_FILE})
+
+# Add our /src directory as a glob
+file(GLOB src_GLOB
+  src/*
+)
+
 # Executable
-add_executable(time-logger src/main.cpp)
+add_executable(time-logger ${src_GLOB})
 
-# Add wx include dirs
-include_directories(time-logger ${wxWidgets_INCLUDE_DIRS})
-
+# Link wxWidgets lib and add the wxWidgets link libraries
+target_link_libraries(time-logger ${wxWidgets_LIBRARIES})
+target_include_directories(time-logger PRIVATE ${wxWidgets_INCLUDE_DIRS})
