--- a/settings.yaml
+++ b/settings.yaml
@@ -1,1 +1,9 @@
 language: 'en'
+
+positions:
+  top-level-window-pos-x: 250
+  top-level-window-pos-y: 250
+
+sizes:
+  top-level-window-length: 500
+  top-level-window-height: 500
