--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ include(${wxWidgets_USE_FILE})
 
 # Add our /src directory as a glob
 file(GLOB src_GLOB
-  src/*.cpp
-  src/panels/*.cpp
+  src/**.cpp
+  src/panels/**.cpp
 )
 
 # Executable
